<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_Cau1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8D57ED"
        android:text="@string/cau1"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button_Cau2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8D57ED"
        android:text="@string/cau2"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button_Cau3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8D57ED"
        android:text="@string/cau3"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button_Cau4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8D57ED"
        android:text="@string/cau4"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>