<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Cau1">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/custom_input"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:translationZ="1dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/soA"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextNumber_SoA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Nhập Số"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColor="#FFAB00"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_shadow">

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/custom_input"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:translationZ="1dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:text="@string/soB"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextNumber_SoB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Nhập Số"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColor="#FFAB00"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_shadow">

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp">

                <Button
                    android:id="@+id/button_Tong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8D57ED"
                    android:text="@string/tinh_tong"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:translationZ="5dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="3dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/custom_input"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:translationZ="1dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ketqua"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextNumber_KetQua"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="Hiển Thị Kết Quả"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColor="#FFAB00"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_shadow">

                </FrameLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>